<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dieta</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Bienvenido</string>
    <string name="next">Siguiente</string>
    <string name="imageDescriptionWelcome">Imagen de Bienvenida</string>
    <string name="title_activity_diet">Mi dieta</string>
    <string name="title_section_diet_day">Comido hoy</string>
    <string name="title_section_diet_week">Comido esta semana</string>
    <string name="title_activity_welcome">Bienvenido</string>
    <string name="continue_plan">Continuar Plan</string>
    <string name="new_plan">Nuevo Plan</string>
    <string name="title_activity_inputs">Inputs</string>
    <string name="title_input">Ingrese sus datos</string>
    <string name="hint_name">Ingrese su nombre</string>
    <string name="hint_years">Ingrese su edad</string>
    <string name="hint_weight">Ingrese su peso</string>
    <string name="hint_height">Ingrese su altura</string>
    <string name="lose_weight">Perder peso</string>
    <string name="gain_weight">Ganar peso</string>
    <string name="title_dialog">Cuidado</string>
    <string name="dialog_message">Complete todos los campos</string>
    <string name="total_calories">Calorias totales: </string>
    <string name="title_activity_diet2">Diet2</string>
    <string name="hello_world">Hello world!</string>

</resources>
